--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <!-- <app-home>  </app-home> -->
- <app-navigation></app-navigation>
+ <!--<app-navigation></app-navigation>-->
+
  <div class="content">
    <router-outlet></router-outlet>
  </div>
