--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+/* Global styles to remove default margins and padding */
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+  }
+  
+  /* Ensure all elements use border-box */
+  * {
+    box-sizing: border-box;
+  }
+  
+  /* Make sure the root element takes full width */
+  app-root {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0%;
+  }
