design customer page

--- a/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/customer-dashboard/customer-dashboard.component.html
@@ -3,7 +3,7 @@
     <!--<div class="logo">🏠  StayZee.com</div>!-->
     <nav class="navbar">
       <div class="logo">
-        <a routerLink="/" class="logo-link">🏠StayZee</a>
+        <a routerLink="/" class="logo-link">🏠StayZee.com</a>
       </div>
       <div class="nav-links">
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
@@ -19,7 +19,7 @@
             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
             <circle cx="12" cy="7" r="4"></circle>
           </svg>
-            <a routerLink="/profile" (click)="closeMenu()">profile</a>
+            <a routerLink="/profile" (click)="closeMenu()">Profile</a>
         </div>
       </div>
     
