--- a/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/customer-dashboard/customer-dashboard.component.html
@@ -9,7 +9,7 @@
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a routerLink="/favorites" routerLinkActive="active">❤️Favorites</a>
         <a href="/setting" routerLinkActive="active">⚙️Setting</a>
-        <a href="about" routerLinkActive="active">👥About Us</a>
+        <a href="/about" routerLinkActive="active">👥About Us</a>
 
       </div>
       <div class="profile-section">
