--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -2,38 +2,52 @@
     <div class="description"><p>StayZee.com connects University students, forigners and homeowners across Sri Lanka by providing a trusted space to find budget-friendly rooms, apartments, and homestay properties. Whether you are planning a short vacation,long-term stay, or weekend getaway, our platform helps you discover verified homes with real photos and detailed descriptions. Search, compare and book your stay anywhere in Sri Lanka and enjoy the comfort of a home away from home.</p>
     </div>
     <div class="footer-container">
-        
-            <div class="footer-column">
-                <h4>Houses for rent</h4>
-                <a>House for rent in Colombo</a>
-                <a>House for rent in Kandy</a>
-                <a>House for rent in Gampaha</a>
-                <a>House for rent in Dehiwala</a>
-            </div>
-        
-            <div class="footer-column">
-                <h4>Rooms</h4>
-                <a>Rooms for rent in Colombo</a>
-                <a>Rooms for rent in Kandy</a>
-                <a>Rooms for rent  in Dehiwala</a>
-                <a>Rooms for rent in Gampaha</a>
-            </div>
-        
-            <div class="footer-column">
-                <h4>Apartments</h4>
-                <a>Apartments in Colombo</a>
-                <a>Apartments in Dehiwala</a>
-                <a>Apartments in Rajagiriya</a>
-            </div>
-        
-            <div class="footer-column">
-                <h4>Boarding</h4>
-                <a>Rooms in Jaffna</a>
-                <a>Rooms in Kandy</a>
-                <a>Rooms in colombo</a>
-            </div>
-        
+        <div class="footer-column">
+            <h4>Houses for rent</h4>
+            <a>House for rent in Colombo</a>
+            <a>House for rent in Kandy</a>
+            <a>House for rent in Gampaha</a>
+            <a>House for rent in Dehiwala</a>
+        </div>
+    
+        <div class="footer-column">
+            <h4>Rooms</h4>
+            <a>Rooms for rent in Colombo</a>
+            <a>Rooms for rent in Kandy</a>
+            <a>Rooms for rent  in Dehiwala</a>
+            <a>Rooms for rent in Gampaha</a>
+        </div>
+    
+        <div class="footer-column">
+            <h4>Apartments</h4>
+            <a>Apartments in Colombo</a>
+            <a>Apartments in Dehiwala</a>
+            <a>Apartments in Rajagiriya</a>
+        </div>
+    
+        <div class="footer-column">
+            <h4>Boarding</h4>
+            <a>Rooms in Jaffna</a>
+            <a>Rooms in Kandy</a>
+            <a>Rooms in colombo</a>
+        </div>
+        <div class="footer-column">
+            <h4>Company</h4>
+            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+            <a routerLink="/about">About Us</a>  
+        </div >
     </div>
+    <div class="footer">
+        <h4>Contact Us</h4>
+        <a href="mailto:stayzee@gmail.com">
+            📩 stayzee@gmail.com
+          </a><br>
+        
+          <a href="tel:+94771234567">
+            📞 +94 77 123 4567
+          </a>
+    </div>
+
         
     <p class="copyright">
       Copyright © {{ currentYear }} StayZee.com — All rights reserved
