--- a/src/app/admin/settings/settings.component.html
+++ b/src/app/admin/settings/settings.component.html
@@ -47,5 +47,15 @@
                 style="border:0; border-radius: 8px;" allowfullscreen></iframe>
         </div>
     </div>
+    <div class="setting-item">
+    <div class="setting-info">
+        <h3>{{ 'ADD_TO_HOME_SCREEN' | translate }}</h3>
+        <p>{{ 'INSTALL_APP_GUIDE' | translate }}</p>
+    </div>
+    <button class="primary-btn" (click)="goToAddHomePage()">
+        {{ 'Add' | translate }}
+    </button>
+    </div>
+    
 
 </div>
