--- a/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/src/app/customer-dashboard/customer-dashboard.component.html
@@ -8,7 +8,7 @@
       <div class="nav-links">
         <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
         <a routerLink="/favorites" routerLinkActive="active">❤️Favorites</a>
-        <a href="/setting" routerLinkActive="active">⚙️Setting</a>
+        <a href="/admin/settings" routerLinkActive="active">⚙️Setting</a>
         <a href="/about" routerLinkActive="active">👥About Us</a>
 
       </div>
