--- a/src/app/admin/settings/settings.component.html
+++ b/src/app/admin/settings/settings.component.html
@@ -1,3 +1,8 @@
+<div class="card">
+    <button type="button" class="back-btn" (click)="goBack()">
+    ← Back
+  </button>
+  </div>
 <div class="settings-container">
     <h2>{{ 'SETTINGS' | translate }}</h2>
 
