--- a/src/app/admin/settings/settings.component.scss
+++ b/src/app/admin/settings/settings.component.scss
@@ -9,6 +9,15 @@
         font-size: 2rem;
         font-weight: 600;
     }
+    .card {
+    background: white;
+    border-radius: 20px;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 600px;
+    padding: 30px 25px;
+    margin-top: 30px;
+  }
 
     .setting-item {
         display: flex;
