--- a/src/app/home.component/home.component.html
+++ b/src/app/home.component/home.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
   <div class="container">
     <div class="logo">🏠  StayZee.com</div>
      <nav class="navbar">
@@ -25,7 +25,8 @@
     
     </nav> 
   </div>
-</header>
+</header> -->
+
 <div class="container">
   <h1 class="main-title">Get a smooth stay in Sri Lanka... 🏖️</h1>
 
@@ -81,7 +82,7 @@
   </div>
 
   <div class="no-data" *ngIf="rentals.length === 0">
-    <p>தற்போது வீடுகள் எதுவும் கிடைக்கவில்லை </p>
+    <p>Currently, no houses are available. </p>
   </div>
 </div>
 
