--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -11,5 +11,5 @@
   {{ errorMessage }}
   </div>
   <p>Don't have an account? <a routerLink="/register">Register here</a></p>
-  <p> <a routerLink="/register">Forgot Password</a></p>
+  <p> <a routerLink="/forgot-password">Forgot Password</a></p>
 </div>
