--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,11 +1,28 @@
-.content {
-  margin: 0;
-  padding: 16px;
+/* Admin Content Wrapper - Shifts content to right of fixed sidebar */
+.admin-content {
+  margin-left: 240px;
+  padding: 20px;
   transition: margin-left 0.25s ease;
+  width: auto;
 }
 
 @media (max-width: 900px) {
-  .content {
+  .admin-content {
     margin-left: 0;
   }
+}
+
+/* User Container - Default full width or centered */
+.container {
+  width: 100%;
+  margin: 0 auto;
+  min-height: 100%;
+  padding-top: 80px;
+  /* Space for fixed navbar */
+}
+
+/* For pages with no nav (Auth/Landing) */
+.auth-content {
+  width: 100%;
+  height: 100%;
 }
