--- a/src/app/home.component/home.component.html
+++ b/src/app/home.component/home.component.html
@@ -71,9 +71,9 @@
             <strong>{{ r.oneDayPrice | number }}</strong>/OneDay
           </div>
           <button class="favorite-btn">❤️</button>
-          <button class="book-btn" 
-                  (click)="bookNow(r.id)"
-                  type="button">
+          
+          <!-- <button class="favorite-btn">❤️</button> -->
+          <button class="book-btn" (click)="bookNow(r.id)">
             BOOK NOW
           </button>
         </div>
