--- a/src/app/navbars/navbars.html
+++ b/src/app/navbars/navbars.html
@@ -1,11 +1,12 @@
 <header class="header">
   <div class="container">
+
     <div class="logo">
       <a routerLink="/" class="logo-link">StayZee.com</a>
     </div>
 
     <nav class="nav-links">
-      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+      <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a routerLink="/favorite" routerLinkActive="active">❤️Favorites</a>
       <a routerLink="/about" routerLinkActive="active">👥About Us</a>
       <a href="/admin/settings" routerLinkActive="active">⚙️Setting</a>
@@ -13,6 +14,7 @@
         Settings
       </a>
     </nav>
+   
 
     <!-- Login / Profile Section -->
     <div class="auth-section">
@@ -56,3 +58,4 @@
     </div>
   </div>
 </header>
+    
