--- a/src/app/navbars/navbars.html
+++ b/src/app/navbars/navbars.html
@@ -9,7 +9,7 @@
       <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a routerLink="/favorite" routerLinkActive="active">❤️Favorites</a>
       <a routerLink="/about" routerLinkActive="active">👥About Us</a>
-      <a href="/admin/settings" routerLinkActive="active">⚙️Setting</a>
+      <a href="/settings" routerLinkActive="active">⚙️Setting</a>
       <a *ngIf="authService.getRole() === 'Admin'" routerLink="/admin/settings" routerLinkActive="active">
         Settings
       </a>
