--- a/src/app/owner/add-property/add-property.html
+++ b/src/app/owner/add-property/add-property.html
@@ -67,7 +67,7 @@
 
       <!-- Current Bill -->
       <div class="input-group">
-        <label>Current Electricity Bill (₹)</label>
+        <label>Current  Bill Number </label>
         <input type="number" min="0"
                [(ngModel)]="rentalData.currentBill"
                name="currentBill" required />
